Added values transformation via Java vector API